--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 header
 {
-    background-color: black;
-    opacity: .75;
+    background-color: gray;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     padding: 1em;
