--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 header
 {
-    background-color: gray;
+    background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     padding: 1em;
