--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,36 @@
+
+/* For all */
+
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 *{
     font-family: roboto;    
 }
 
+/* Main sections */
 header
 {
     background-color: black;
-    color: white;
+    color: whits;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 1em;
+    /* padding: 15px; */
     max-width: auto;
     height: auto;
 }
 
+
+/* Class-specific */
 .center{
-    align-content: center;
+    text-align: center;
+    padding: 50px;
+    color: white;
+    background-color: black;
+}
+
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2rem;
 }
