--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@ h1{
 
 h2{
     font-size: 2rem;
+    padding: 15px;
+}
+
+h3{
+    color: grey;
+    padding: 15px;
+    font-size: 1.5rem;
 }
 
 .inlineblock{
@@ -54,7 +61,7 @@ h2{
 }
 
 .overlay {
-        height: 40px;
+        height: 30px;
         width:98%;
         color: black;
         border-radius: 2.5px;
